--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 <li>
                     <a href="index.html">Home &hellip;</a>
                     <ul>
-                        <li><a href="tb.html">TB Paru</a></li>
-                        <li><a href="pneumonia.html">Pneumonia</a></li>
-                        <li><a href="dbd.html">Demam Berdarah</a></li>
-                        <li><a href="diare.html">Diare</a></li>
+                        <li><a href="tb.html"></a></li>
+                        <li><a href="pneumonia.html"></a></li>
+                        <li><a href="dbd.html"></a></li>
+                        <li><a href="diare.html"></a></li>
                     </ul>
                 </li>
                 <li><a href="aboutus.html">Tentang Kami</a></li>
