--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 <li>
                     <a href="index.html">Home &hellip;</a>
                     <ul>
-                        <li><a href="tb.html"></a></li>
-                        <li><a href="pneumonia.html"></a></li>
-                        <li><a href="dbd.html"></a></li>
-                        <li><a href="diare.html"></a></li>
+                        <li><a href="tb.html">TB Paru</a></li>
+                        <li><a href="pneumonia.html">Pneumonia</a></li>
+                        <li><a href="dbd.html">Demam Berdarah</a></li>
+                        <li><a href="diare.html">Diare</a></li>
                     </ul>
                 </li>
                 <li><a href="aboutus.html">Tentang Kami</a></li>
@@ -86,7 +86,6 @@
                             <img src="images/tbc.png" alt="" />
                         </span>
                         <a href="tb.html">
-                            <h2>TB PARU</h2>
                             <div class="content">
                                
                             </div>
@@ -97,7 +96,6 @@
                             <img src="images/pneumonia.png" alt="" />
                         </span>
                         <a href="pneumonia.html">
-                            <h2>Pneumonia</h2>
                             <div class="content">
                                </div>
                         </a>
@@ -107,7 +105,6 @@
                             <img src="images/deman berdarah.png" alt="" />
                         </span>
                         <a href="dbd.html">
-                            <h2>Demam Berdarah</h2>
                             <div class="content">
                                </div>
                         </a>
@@ -117,7 +114,6 @@
                             <img src="images/diare.png" alt="" />
                         </span>
                         <a href="diare.html">
-                            <h2>Diare</h2>
                             <div class="content">
                               </div>
                         </a>
