--- a/pneumonia.html
+++ b/pneumonia.html
@@ -194,7 +194,7 @@
                         </section>
 
 						<!-- Section 4 -->
-						<section>>
+						<section>
 							<p  style="max-width: 95%; padding-left: 5%; text-align: justify; color:red;"><a href="https://ayosehat.kemkes.go.id/topik-non-penyakit/infeksi-pernapasan--tb/pneumonia">Sumber</a></p>
 						</section>
 						
