--- a/person1.html
+++ b/person1.html
@@ -117,7 +117,7 @@
             <h2>Menu</h2>
             <ul>
                 <li>
-                    <a href="index.html">Home &hellip;</a>
+                    <a href="index.html">Beranda</a>
                     <ul>
                         <li><a href="tb.html">TB Paru</a></li>
                         <li><a href="pneumonia.html">Pneumonia</a></li>
